--- a/templates/Index.html
+++ b/templates/Index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Market Prediction</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/app.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- <script src="js/app.js" type="text/javascript"></script> -->
@@ -43,13 +43,13 @@
                 <button class="slide-btn slide-btn-3"></button>
                 <div class="slideshow-wrapper">
                     <div class="slide">
-                        <img class="slide-img" src="images/img1.jpg">
+                        <img class="slide-img" src="{{ url_for('static',filename='images/img1.jpg' }}">
                     </div>
                     <div class="slide">
-                        <img class="slide-img" src="images/img2.jpg">
+                        <img class="slide-img" src="{{ url_for('static',filename='images/img2.jpg' }}">
                     </div>
                     <div class="slide">
-                        <img class="slide-img" src="images/img3.png">
+                        <img class="slide-img" src="{{ url_for('static',filename='images/img3.png' }}">
                     </div>
                 </div>
             </div>
@@ -79,7 +79,7 @@
             </div>
             <br>
             <div class="image">
-                <img src="images/img4.png">
+                <img src="{{ url_for('static',filename='images/img4.png' }}">
             </div>
         </center>
     </section>
@@ -111,7 +111,7 @@
             <div class="template">
                 <div class="vert">
                     <div class="img">
-                        <img src="images/IMG_20220428_144145_242.jpg" alt="">
+                        <img src="{{ url_for('static',filename='images/IMG_20220428_144145_242.jpg' }}" alt="">
                     </div>
                     <div class="content">
                         <h2>Yash Sharma</h2>
@@ -153,5 +153,5 @@
     </section>
 
 </body>
-<script src="js/app.js"></script>
+<script src="{{ url_for('static',filename='js/app.js' }}"></script>
 </html>
