--- a/templates/Index.html
+++ b/templates/Index.html
@@ -29,7 +29,7 @@
         <div class="console-container">
             <span id="text"></span>
             <div class="console-underscore" id="console">
-                &#95;
+                <div id="d1">&#95;</div>
             </div>
         </div>
     </header>
